GNOME Bugzilla – Bug 775752
monoscope: Leaks allocation query
Last modified: 2016-12-07 12:21:34 UTC
Created attachment 341538 [details] [review] Unreferencing the query in gstmonoscope In gst/monoscope/gstmonoscope.c Function: gst_monoscope_src_negotiate local variable 'query' gets allocated memory at line:262 but not freed. Added gst_query_unref (query) to avoid the memory leak.
commit c3cdae4d6e66d9d04c2a26d3162ef2a64f10aa0c Author: Garima Gaur <garima.g@samsung.com> Date: Wed Dec 7 17:22:22 2016 +0530 monoscope: Unref allocation query after finished with it https://bugzilla.gnome.org/show_bug.cgi?id=775752