monoscope: Unref allocation query after finished with it

https://bugzilla.gnome.org/show_bug.cgi?id=775752